fixed visibilty of footer

--- a/src/com/content-comments/comments.less
+++ b/src/com/content-comments/comments.less
@@ -92,6 +92,9 @@
 			}
 			& > .-nav {
 				margin: 0.5em 0;
+				
+				overflow: hidden;
+				
 				& > div {
 					position: relative;
 					
@@ -130,6 +133,7 @@
 				& .-edit,
 				& .-cancel,
 				& .-save,
+				& .-love,
 				& .-publish {
 					float: right;
 					margin-right: 0;
